force-app/main/default/objects/Service_Transaction_Log__c/Service_Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Object stores transaction ID and related info for AAI web service callouts performed by VTM.</description>
    <label>Service Transaction Log</label>
    <nameField>
        <label>Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>