force-app/main/default/objects/Service_Transaction_Log__c/fields/Class_JSON__c.field-meta.xml
<CustomField>
    <fullName>Class_JSON__c</fullName>
    <description>Store a JSON representation of the executing class</description>
    <label>Class JSON</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>