force-app/main/default/objects/Service_Transaction_Log__c/fields/Class_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Class_Retry_Count__c</fullName>
    <label>Class Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>