force-app/main/default/objects/Service_Transaction_Log__c/fields/Class_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Class_Stack_Trace__c</fullName>
    <description>Stores the stack trace of any exception that occurs within the the generic queue</description>
    <label>Class Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>