force-app/main/default/objects/Service_Transaction_Log__c/fields/Executing_Class__c.field-meta.xml
<CustomField>
    <fullName>Executing_Class__c</fullName>
    <description>Name of the class executing in the Generic Queue</description>
    <label>Executing Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>