force-app/main/default/objects/Service_Transaction_Log__c/fields/Integration_Partner__c.field-meta.xml
<CustomField>
    <fullName>Integration_Partner__c</fullName>
    <label>Integration Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RRD</fullName>
            </value>
            <value>
                <fullName>DSO</fullName>
            </value>
            <value>
                <fullName>AAI</fullName>
            </value>
            <value>
                <fullName>ASI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>