force-app/main/default/objects/Service_Transaction_Log__c/fields/Return_Message__c.field-meta.xml
<CustomField>
    <fullName>Return_Message__c</fullName>
    <label>Return Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>