force-app/main/default/objects/Service_Transaction_Log__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Standardization</fullName>
            </value>
            <value>
                <fullName>Create Just a Person</fullName>
            </value>
            <value>
                <fullName>Create Refund</fullName>
            </value>
            <value>
                <fullName>Create Volunteer</fullName>
            </value>
            <value>
                <fullName>Get Volunteer Audit</fullName>
            </value>
            <value>
                <fullName>Member Person Search</fullName>
            </value>
            <value>
                <fullName>Payment Authorization</fullName>
            </value>
            <value>
                <fullName>Update Person or Non-Person</fullName>
            </value>
            <value>
                <fullName>Update Person Record</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>