force-app/main/default/objects/Service_Transaction_Log__c/fields/Traffic_Flow__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Flow__c</fullName>
    <label>Traffic Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>