force-app/main/default/objects/Service_Transaction_Log__c/recordTypes/External_Services.recordType-meta.xml
<RecordType>
    <fullName>External_Services</fullName>
    <active>true</active>
    <description>Record type for logging external services</description>
    <label>External Services</label>
</RecordType>