force-app/main/default/objects/Service_Transaction_Log__c/recordTypes/Generic_Queue.recordType-meta.xml
<RecordType>
    <fullName>Generic_Queue</fullName>
    <active>true</active>
    <description>Used for tracking the Generic Queue retry logic</description>
    <label>Generic Queue</label>
</RecordType>